{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 215,
  "lineage": "e7985d49-2c19-c7ff-2d39-c7567316d7ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pg_ha_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f65b8614a860c29",
            "arn": "arn:aws:ec2:us-west-2:379694287116:instance/i-0b3dab3d07fdc1168",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3dab3d07fdc1168",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "PGHA_W2_SSH_Key_AUTO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0501d10a59f61aff2",
            "private_dns": "ip-10-0-1-146.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "public_dns": "ec2-18-237-123-60.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.123.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f26544f1e1ff677a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dfc7174afd36a050"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3e92069971db72",
            "tags": {
              "Environment": "Dev",
              "HostType": "PostgreSQL",
              "Name": "PGHA-db-1",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "HostType": "PostgreSQL",
              "Name": "PGHA-db-1",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dfc7174afd36a050"
            ]
          },
          "dependencies": [
            "aws_security_group.pg_ha-sg",
            "aws_subnet.pg_ha-priv_subnet",
            "aws_vpc.pg_ha-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f65b8614a860c29",
            "arn": "arn:aws:ec2:us-west-2:379694287116:instance/i-03764f07710be136e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03764f07710be136e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "PGHA_W2_SSH_Key_AUTO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016611feb3ff33380",
            "private_dns": "ip-10-0-1-199.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-54-202-44-91.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.44.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee708c0b91b2484f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dfc7174afd36a050"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3e92069971db72",
            "tags": {
              "Environment": "Dev",
              "HostType": "PostgreSQL",
              "Name": "PGHA-db-2",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "HostType": "PostgreSQL",
              "Name": "PGHA-db-2",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dfc7174afd36a050"
            ]
          },
          "dependencies": [
            "aws_security_group.pg_ha-sg",
            "aws_subnet.pg_ha-priv_subnet",
            "aws_vpc.pg_ha-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f65b8614a860c29",
            "arn": "arn:aws:ec2:us-west-2:379694287116:instance/i-0f12954d94e1fa0df",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f12954d94e1fa0df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "PGHA_W2_SSH_Key_AUTO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0501701c1264c515f",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-18-237-55-32.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.55.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0780b316d55e6d76b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0dfc7174afd36a050"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3e92069971db72",
            "tags": {
              "Environment": "Dev",
              "HostType": "PostgreSQL",
              "Name": "PGHA-db-3",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "HostType": "PostgreSQL",
              "Name": "PGHA-db-3",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dfc7174afd36a050"
            ]
          },
          "dependencies": [
            "aws_security_group.pg_ha-sg",
            "aws_subnet.pg_ha-priv_subnet",
            "aws_vpc.pg_ha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pg_ha-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:379694287116:internet-gateway/igw-0ad8262571fa6f4ca",
            "id": "igw-0ad8262571fa6f4ca",
            "owner_id": "379694287116",
            "tags": {
              "Environment": "Dev",
              "Name": "PGHA_gw",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PGHA_gw",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "vpc_id": "vpc-01ea74491271bef56"
          },
          "dependencies": [
            "aws_vpc.pg_ha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pg_ha-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:379694287116:route-table/rtb-07c29ede6c4cad12c",
            "id": "rtb-07c29ede6c4cad12c",
            "owner_id": "379694287116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad8262571fa6f4ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "PGHA_router",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PGHA_router",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ea74491271bef56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pg_ha-gw",
            "aws_vpc.pg_ha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pg_ha-priv_subnet-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d80a9146a11ce91",
            "route_table_id": "rtb-07c29ede6c4cad12c",
            "subnet_id": "subnet-0ba3e92069971db72"
          },
          "dependencies": [
            "aws_internet_gateway.pg_ha-gw",
            "aws_route_table.pg_ha-router",
            "aws_subnet.pg_ha-priv_subnet",
            "aws_vpc.pg_ha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pg_ha-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:379694287116:security-group/sg-0dfc7174afd36a050",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfc7174afd36a050",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "pg_ha-sg",
            "name_prefix": "",
            "owner_id": "379694287116",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "PGHA_sg",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PGHA_sg",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ea74491271bef56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.pg_ha-priv_subnet",
            "aws_vpc.pg_ha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pg_ha-priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:379694287116:subnet/subnet-0ba3e92069971db72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba3e92069971db72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "379694287116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "PGHA_psnet",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PGHA_psnet",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "vpc_id": "vpc-01ea74491271bef56"
          },
          "dependencies": [
            "aws_vpc.pg_ha-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pg_ha-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:379694287116:vpc/vpc-01ea74491271bef56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0862e871c4a30e793",
            "default_route_table_id": "rtb-0e86c0cfdc08decbd",
            "default_security_group_id": "sg-0e7855cf1486c5f3a",
            "dhcp_options_id": "dopt-05cfbfc7eeec18770",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ea74491271bef56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e86c0cfdc08decbd",
            "owner_id": "379694287116",
            "tags": {
              "Environment": "Dev",
              "Name": "PGHA_vpc",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "PGHA_vpc",
              "Owner": "Charly El-Chinoo Batista",
              "PerconaCreatedBy": "charly.batista@percona.com",
              "Product": "Percona Distribution for PostgreSQL: High Availability with Patroni and Streaming Replication",
              "Team": "Tech Lead"
            }
          }
        }
      ]
    }
  ]
}